samples/_failures_safe/1761722168_f50420_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8e469f5.c:175: error: expected ‘;’, ‘,’ or ‘)’ at end of input
